Updated jupyter notebook, created new py file, added new images

--- a/NST.ipynb
+++ b/NST.ipynb
@@ -280,7 +280,7 @@
     "    elif input_img == 'style':\n",
     "        noise = style_tensor.clone().requires_grad_().to(device)\n",
     "    else:\n",
-    "        noise = torch.randn(cont.size(), requires_grad = True, device = device)\n",
+    "        noise = torch.randn(content_tensor.size(), requires_grad = True, device = device)\n",
     "    \n",
     "    # Set optimizer\n",
     "    optimizer = optim.LBFGS([noise])\n",
